--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <!-- <script src="js/three/QuickHull.js"></script> -->
     <!-- <script src="js/three/ConvexGeometry.js"></script> -->
     <!-- <script src="js/three/DragControls.js"></script> -->
+    <script src="js/Game.js"></script>
     <script src="js/index.js"></script>
 
 </body>
