--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,9 @@
     <title>Online 3D Go</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-
 </head>
 
 <body>
-
     <script src="js/three/three.js"></script>
     <script src="js/three/OBJLoader.js"></script>
     <!-- <script src="js/three/MTLLoader.js"></script> -->
@@ -18,9 +16,12 @@
     <!-- <script src="js/three/QuickHull.js"></script> -->
     <!-- <script src="js/three/ConvexGeometry.js"></script> -->
     <!-- <script src="js/three/DragControls.js"></script> -->
+    <script src="js/eventbus.min.js"></script>
+    <script src="js/colors.js"></script>
     <script src="js/Game.js"></script>
+    <script src="js/global-variables.js"></script>
+    <script src="js/load-assets.js"></script>
     <script src="js/index.js"></script>
-
 </body>
 
 </html>
