--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,8 @@
     <!-- <script src="js/three/QuickHull.js"></script> -->
     <!-- <script src="js/three/ConvexGeometry.js"></script> -->
     <!-- <script src="js/three/DragControls.js"></script> -->
-    <script src="js/eventbus.min.js"></script>
-    <!-- <script src="js/colors.js"></script> -->
-    <script src="js/shared-helpers.js"></script>
+    <script src="js/lib/eventbus.min.js"></script>
+    <script src="js/lib/shared-helpers.js"></script>
     <script src="js/Game.js"></script>
     <script src="js/global-variables.js"></script>
     <script src="js/load-assets.js"></script>
