--- a/public/create-game.html
+++ b/public/create-game.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <button type="button" id="createGame" class="btn btn-primary">Create</button>
+    <div class="container">
+        <div class="jumbotron">
+            <button type="submit" id="createGame" class="btn btn-primary">Create a game</button>
+        </div>
+    </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="js/lib/socket.io.js"></script>
