--- a/public/game.html
+++ b/public/game.html
@@ -24,8 +24,8 @@
     <script src="js/global-variables.js"></script>
     <script src="js/load-assets.js"></script>
     <script src="js/View.js"></script>
-    <script src="js/main.js"></script>
-    <script type="text/javascript">
+<!--     <script src="js/main.js"></script>
+ -->    <script type="text/javascript">
     var socket = io();
 
     var game;
