--- a/public/join-game.html
+++ b/public/join-game.html
@@ -8,21 +8,46 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
-<body>
-    <button type="button" id="joinGame" class="btn btn-primary">Join</button>
+<body onload="fetchGames()">
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Join a game</h1>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div id="gamesList">
+                    </div>
+                </div>
+            </div>
+            <button type="submit" id="joinGame" class="btn btn-primary">Join</button>
+        </div>
+    </div>
+</body>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="js/lib/socket.io.js"></script>
 <script type="text/javascript">
-$(function() {
+function fetchGames() {
+    var gamesList = document.getElementById('gamesList');
+    gamesList.innerHTML = '';
+    gamesList.innerHTML += '<div class="well">' +
+        '<p><span class="label label-info"> Opponent: sun420 </span></p>' +
+        '<a href="#" class="btn" onclick="setStatusClosed(\'' + 4 + '\')">Join</a> ' +
+        '</div>';
+    gamesList.innerHTML += '<div class="well">' +
+        '<p><span class="label label-info"> Opponent: sun420 </span></p>' +
+        '<a href="#" class="btn" onclick="setStatusClosed(\'' + 4 + '\')">Join</a> ' +
+        '</div>';
+    gamesList.innerHTML += '<div class="well">' +
+        '<p><span class="label label-info"> Opponent: sun420 </span></p>' +
+        '<a href="#" class="btn" onclick="setStatusClosed(\'' + 4 + '\')">Join</a> ' +
+        '</div>';
+}
 
-    var socket = io();
+var socket = io();
 
-    $('#joinGame').on('click', function(event) {
-        socket.emit('joinGame');
-        window.location.href = "http://stackoverflow.com";
-    });
-
+$('#joinGame').on('click', function(event) {
+    socket.emit('joinGame');
+    window.location.href = "http://stackoverflow.com";
 });
 </script>
 
